testdata/golden/sema/invalid/raw_pointers/struct_field_ptr.fmt
type Foo = { p: *byte };

fn main() -> int {
    return 0;
}
